[package]
name = "api_arun_gg"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "*" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.9"
libarun = {git = "https://github.com/Arunscape/libarun.git"}
serde_json = "1.0"
